--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "styleguide",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "Front-end development styleguide with Sass, JavaScript and Handlebars.",
   "author": "Fynn Becker <info@fynn-becker.de>",
   "scripts": {
@@ -27,6 +27,7 @@
   "devDependencies": {
     "browser-sync": "^2.12.8",
     "del": "^2.2.0",
+    "front-matter": "^2.1.0",
     "glob": "^7.0.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
