--- a/.jshintrc
+++ b/.jshintrc
@@ -1,3 +1,14 @@
 {
-  "esversion": 6
+  "eqeqeq": true,
+  "esversion": 6,
+  "freeze": true,
+  "latedef": true,
+  "nonbsp": true,
+  "notypeof": false,
+  "shadow": "outer",
+  "undef": true,
+  "unused": true,
+
+  "browser": true,
+  "devel": true
 }
